--- a/cv.css
+++ b/cv.css
@@ -1,9 +1,73 @@
+.page{
+	width:780px;
+	margin:auto;
+	font-size:16px;
+	font-family: 'source sans Pro', Calibri, Tahoma, Arial, sans-serif;
+	padding:40px;
+	border: 5px solid #9933CC;
+	
+	background-color: #FFFFFF;
+}
+.infophoto{
+	height: 250px;
+}
+.info{
+	float: left;
+}
+.photo{
+	float: right;
+}
 .section{
 	margin-bottom: 70px;
+	text-align:justify;
 }
 .sec-gauche{
 	float: left;
+	font-weight:bold;
+	font-size:16px;
+}
+#forma-gauche p{
+	margin-top:0px;
+	margin-bottom:17px;
+}
+
+.duree{
+	font-weight: lighter;
+	font-style:oblique;
+	font-size:16px;
 }
 .sec-droite{
-	margin-left: 150px;
+	margin-left: 100px;
+	margin-top: 37px;
+}
+.strong{
+	font-size:26px;
+}
+.titre{
+	font-weight: bold;
+	font-size:16px;
+}
+h2{
+	font-size:20px;
+	color: #9933CC;
+	text-transform:uppercase;
+	border-bottom: 2px solid #9933CC;
+}
+#exp-gauche p{
+	margin-top:22px;
+}
+#exp1-gauche p{
+	margin-top:34px;
+}
+#exp2-gauche p{
+	margin-top:133px;
+}
+#exp3-gauche p{
+	margin-top:17px;
+}
+#exp4-gauche p{
+	margin-top:87px;
+}
+body{
+	background-color: #cccccc;
 }
